# RegisterAndLogin-Grpc-Djinni

./: .gitmodules  CMakeLists.txt  README.md
client/djinni-client-app/: CMakeLists.txt  GypAndroid.mk  Makefile  README.md  client.djinni  libclientapp.gyp  libclientapp_jni.target.mk  run_djinni.sh
client/djinni-client-app/android_project/AndroidClientApp/: build.gradle
client/djinni-client-app/android_project/AndroidClientApp/app/: CMakeLists.txt  build.gradle
client/djinni-client-app/android_project/AndroidClientApp/app/jni/: Application.mk
client/djinni-client-app/android_project/AndroidClientApp/app/src/main/: AndroidManifest.xml
client/djinni-client-app/android_project/AndroidClientApp/app/src/main/cpp/: native-lib.cpp
client/djinni-client-app/android_project/AndroidClientApp/app/src/main/java/com/example/chang/clientapp/: LoginAndRegisterActivity.java
client/djinni-client-app/android_project/AndroidClientApp/app/src/main/res/layout/: activity_main.xml
client/djinni-client-app/android_project/AndroidClientApp/gradle/wrapper/: gradle-wrapper.properties
client/djinni-client-app/generated-src/cpp/: client.hpp  client_interface.hpp  reply.hpp  user.hpp
client/djinni-client-app/generated-src/java/com/mycompany/client/: Client.java  ClientInterface.java  Reply.java  ReplyStruct.java  User.java  UserStruct.java
client/djinni-client-app/generated-src/jni/: NativeClient.cpp  NativeClient.hpp  NativeClientInterface.cpp  NativeClientInterface.hpp  NativeReply.cpp  NativeReply.hpp  NativeReplyStruct.cpp  NativeReplyStruct.hpp  NativeUser.cpp  NativeUser.hpp  NativeUserStruct.cpp  NativeUserStruct.hpp
client/djinni-client-app/generated-src/objc/: TDAClient+Private.h  TDAClient+Private.mm  TDAClient.h  TDAClientInterface+Private.h  TDAClientInterface+Private.mm  TDAClientInterface.h  TDAReply+Private.h  TDAReply+Private.mm  TDAReply.h  TDAReply.mm  TDAReplyStruct+Private.h  TDAReplyStruct+Private.mm  TDAReplyStruct.h  TDAReplyStruct.mm  TDAUser+Private.h  TDAUser+Private.mm  TDAUser.h  TDAUser.mm  TDAUserStruct+Private.h  TDAUserStruct+Private.mm  TDAUserStruct.h  TDAUserStruct.mm
client/djinni-client-app/src/: check_auth.grpc.pb.cc  check_auth.grpc.pb.h  check_auth.pb.cc  check_auth.pb.h  client.grpc.pb.cc  client.grpc.pb.h  client.pb.cc  client.pb.h  client_impl.cpp  client_impl.hpp  login.grpc.pb.cc  login.grpc.pb.h  login.pb.cc  login.pb.h  register.grpc.pb.cc  register.grpc.pb.h  register.pb.cc  register.pb.h
client/djinni-client-app/xcode_project/hellodjixcode/hellodjixcode/: main.cpp
client/djinni-client-app/xcode_project/hellodjixcode/hellodjixcode.xcodeproj/: project.pbxproj
client/djinni-client-app/xcode_project/hellodjixcode/hellodjixcode.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
io/grpc/registerandlogin/grpc/: CheckAuthGrpc.java  RegisterGrpc.java
io/grpc/registerandlogin/utils/: DataBaseUtil.java
server/: build.gradle  local.properties  pom.xml
server/gradle/wrapper/: gradle-wrapper.properties
server/io/grpc/registerandlogin/: CheckAuthReply.java
server/io/grpc/registerandlogin/proto/: login.proto
server/io/grpc/registerandlogin/server/: RegisterAndLoginServer.java
server/io/grpc/registerandlogin/utils/: DataBaseUtil.java  EncryptionUtil.java
server/src/main/java/io/grpc/registerandlogin/grpc/: LoginGrpc.java
server/src/main/java/io/grpc/registerandlogin/proto/: register.proto
server/src/main/java/io/grpc/registerandlogin/server/: RegisterAndLoginServer.java
server/src/main/java/io/grpc/registerandlogin/utils/: DataBaseUtil.java
server/src/main/proto/: check_auth.proto
