cmake_minimum_required(VERSION 3.7)
project(homework)

set(CMAKE_CXX_STANDARD 11)

set(SOURCE_FILES
        client/djinni-client-app/android_project/AndroidClientApp/app/src/main/cpp/native-lib.cpp
        client/djinni-client-app/deps/gyp/data/win/large-pdb-shim.cc
        client/djinni-client-app/deps/gyp/test/actions/generated-header/main.cc
        client/djinni-client-app/deps/gyp/test/actions/src/subdir1/program.c
        client/djinni-client-app/deps/gyp/test/actions-multiple/src/foo.c
        client/djinni-client-app/deps/gyp/test/actions-multiple/src/main.c
        client/djinni-client-app/deps/gyp/test/actions-none/src/foo.cc
        client/djinni-client-app/deps/gyp/test/additional-targets/src/dir1/lib1.c
        client/djinni-client-app/deps/gyp/test/android/32or64.c
        client/djinni-client-app/deps/gyp/test/android/hello.c
        client/djinni-client-app/deps/gyp/test/android/writefile.c
        client/djinni-client-app/deps/gyp/test/arflags/lib.cc
        client/djinni-client-app/deps/gyp/test/assembly/src/lib1.c
        client/djinni-client-app/deps/gyp/test/assembly/src/program.c
        client/djinni-client-app/deps/gyp/test/build-option/hello.c
        client/djinni-client-app/deps/gyp/test/builddir/src/subdir2/subdir3/subdir4/subdir5/prog5.c
        client/djinni-client-app/deps/gyp/test/builddir/src/subdir2/subdir3/subdir4/prog4.c
        client/djinni-client-app/deps/gyp/test/builddir/src/subdir2/subdir3/prog3.c
        client/djinni-client-app/deps/gyp/test/builddir/src/subdir2/prog2.c
        client/djinni-client-app/deps/gyp/test/builddir/src/func1.c
        client/djinni-client-app/deps/gyp/test/builddir/src/func2.c
        client/djinni-client-app/deps/gyp/test/builddir/src/func3.c
        client/djinni-client-app/deps/gyp/test/builddir/src/func4.c
        client/djinni-client-app/deps/gyp/test/builddir/src/func5.c
        client/djinni-client-app/deps/gyp/test/builddir/src/prog1.c
        client/djinni-client-app/deps/gyp/test/cflags/cflags.c
        client/djinni-client-app/deps/gyp/test/compilable/src/lib1.cpp
        client/djinni-client-app/deps/gyp/test/compilable/src/lib1.hpp
        client/djinni-client-app/deps/gyp/test/compilable/src/program.cpp
        client/djinni-client-app/deps/gyp/test/compiler-override/cxxtest.cc
        client/djinni-client-app/deps/gyp/test/compiler-override/test.c
        client/djinni-client-app/deps/gyp/test/conditions/elseif/program.cc
        client/djinni-client-app/deps/gyp/test/configurations/basics/configurations.c
        client/djinni-client-app/deps/gyp/test/configurations/inheritance/configurations.c
        client/djinni-client-app/deps/gyp/test/configurations/target_platform/front.c
        client/djinni-client-app/deps/gyp/test/configurations/target_platform/left.c
        client/djinni-client-app/deps/gyp/test/configurations/target_platform/right.c
        client/djinni-client-app/deps/gyp/test/configurations/x64/configurations.c
        client/djinni-client-app/deps/gyp/test/cxxflags/cxxflags.cc
        client/djinni-client-app/deps/gyp/test/defines/defines.c
        client/djinni-client-app/deps/gyp/test/defines-escaping/defines-escaping.c
        client/djinni-client-app/deps/gyp/test/dependencies/b/b.c
        client/djinni-client-app/deps/gyp/test/dependencies/b/b3.c
        client/djinni-client-app/deps/gyp/test/dependencies/c/c.c
        client/djinni-client-app/deps/gyp/test/dependencies/c/d.c
        client/djinni-client-app/deps/gyp/test/dependencies/sharedlib-linksettings/program.c
        client/djinni-client-app/deps/gyp/test/dependencies/sharedlib-linksettings/sharedlib.c
        client/djinni-client-app/deps/gyp/test/dependencies/sharedlib-linksettings/staticlib.c
        client/djinni-client-app/deps/gyp/test/dependencies/a.c
        client/djinni-client-app/deps/gyp/test/dependencies/main.c
        client/djinni-client-app/deps/gyp/test/dependency-copy/src/file1.c
        client/djinni-client-app/deps/gyp/test/dependency-copy/src/file2.c
        client/djinni-client-app/deps/gyp/test/exclusion/hello.c
        client/djinni-client-app/deps/gyp/test/external-cross-compile/src/bogus1.cc
        client/djinni-client-app/deps/gyp/test/external-cross-compile/src/bogus2.c
        client/djinni-client-app/deps/gyp/test/external-cross-compile/src/program.cc
        client/djinni-client-app/deps/gyp/test/external-cross-compile/src/test1.cc
        client/djinni-client-app/deps/gyp/test/external-cross-compile/src/test2.c
        client/djinni-client-app/deps/gyp/test/external-cross-compile/src/test3.cc
        client/djinni-client-app/deps/gyp/test/external-cross-compile/src/test4.c
        client/djinni-client-app/deps/gyp/test/generator-output/actions/subdir1/program.c
        client/djinni-client-app/deps/gyp/test/generator-output/mac-bundle/header.h
        client/djinni-client-app/deps/gyp/test/generator-output/mac-bundle/main.c
        client/djinni-client-app/deps/gyp/test/generator-output/rules/subdir1/program.c
        client/djinni-client-app/deps/gyp/test/generator-output/src/inc1/include1.h
        client/djinni-client-app/deps/gyp/test/generator-output/src/subdir2/deeper/deeper.c
        client/djinni-client-app/deps/gyp/test/generator-output/src/subdir2/deeper/deeper.h
        client/djinni-client-app/deps/gyp/test/generator-output/src/subdir2/inc2/include2.h
        client/djinni-client-app/deps/gyp/test/generator-output/src/subdir2/prog2.c
        client/djinni-client-app/deps/gyp/test/generator-output/src/subdir3/inc3/include3.h
        client/djinni-client-app/deps/gyp/test/generator-output/src/subdir3/prog3.c
        client/djinni-client-app/deps/gyp/test/generator-output/src/inc.h
        client/djinni-client-app/deps/gyp/test/generator-output/src/prog1.c
        client/djinni-client-app/deps/gyp/test/hard_dependency/src/a.c
        client/djinni-client-app/deps/gyp/test/hard_dependency/src/a.h
        client/djinni-client-app/deps/gyp/test/hard_dependency/src/b.c
        client/djinni-client-app/deps/gyp/test/hard_dependency/src/b.h
        client/djinni-client-app/deps/gyp/test/hard_dependency/src/c.c
        client/djinni-client-app/deps/gyp/test/hard_dependency/src/c.h
        client/djinni-client-app/deps/gyp/test/hard_dependency/src/d.c
        client/djinni-client-app/deps/gyp/test/hello/hello.c
        client/djinni-client-app/deps/gyp/test/hello/hello2.c
        client/djinni-client-app/deps/gyp/test/home_dot_gyp/src/printfoo.c
        client/djinni-client-app/deps/gyp/test/include_dirs/src/inc1/include1.h
        client/djinni-client-app/deps/gyp/test/include_dirs/src/shadow1/shadow.h
        client/djinni-client-app/deps/gyp/test/include_dirs/src/shadow2/shadow.h
        client/djinni-client-app/deps/gyp/test/include_dirs/src/subdir/inc2/include2.h
        client/djinni-client-app/deps/gyp/test/include_dirs/src/subdir/inc.h
        client/djinni-client-app/deps/gyp/test/include_dirs/src/subdir/subdir_includes.c
        client/djinni-client-app/deps/gyp/test/include_dirs/src/inc.h
        client/djinni-client-app/deps/gyp/test/include_dirs/src/includes.c
        client/djinni-client-app/deps/gyp/test/ios/app-bundle/tool_main.cc
        client/djinni-client-app/deps/gyp/test/ios/deployment-target/check-version-min.c
        client/djinni-client-app/deps/gyp/test/ios/extension/ActionExtension/ActionViewController.h
        client/djinni-client-app/deps/gyp/test/ios/extension/ExtensionContainer/AppDelegate.h
        client/djinni-client-app/deps/gyp/test/ios/extension/ExtensionContainer/ViewController.h
        client/djinni-client-app/deps/gyp/test/ios/watch/WatchContainer/AppDelegate.h
        client/djinni-client-app/deps/gyp/test/ios/watch/WatchContainer/ViewController.h
        client/djinni-client-app/deps/gyp/test/ios/watch/WatchKitExtension/InterfaceController.h
        client/djinni-client-app/deps/gyp/test/library/src/lib1.c
        client/djinni-client-app/deps/gyp/test/library/src/lib1_moveable.c
        client/djinni-client-app/deps/gyp/test/library/src/lib2.c
        client/djinni-client-app/deps/gyp/test/library/src/lib2_moveable.c
        client/djinni-client-app/deps/gyp/test/library/src/program.c
        client/djinni-client-app/deps/gyp/test/library_dirs/subdir/hello.cc
        client/djinni-client-app/deps/gyp/test/library_dirs/subdir/mylib.cc
        client/djinni-client-app/deps/gyp/test/library_dirs/subdir/mylib.h
        client/djinni-client-app/deps/gyp/test/link-dependency/main.c
        client/djinni-client-app/deps/gyp/test/link-dependency/mymalloc.c
        client/djinni-client-app/deps/gyp/test/link-objects/base.c
        client/djinni-client-app/deps/gyp/test/link-objects/extra.c
        client/djinni-client-app/deps/gyp/test/linux/implicit-rpath/file.c
        client/djinni-client-app/deps/gyp/test/linux/implicit-rpath/main.c
        client/djinni-client-app/deps/gyp/test/mac/app-bundle/TestApp/TestAppAppDelegate.h
        client/djinni-client-app/deps/gyp/test/mac/app-bundle/empty.c
        client/djinni-client-app/deps/gyp/test/mac/archs/empty_main.cc
        client/djinni-client-app/deps/gyp/test/mac/archs/file_a.cc
        client/djinni-client-app/deps/gyp/test/mac/archs/file_a.h
        client/djinni-client-app/deps/gyp/test/mac/archs/file_b.cc
        client/djinni-client-app/deps/gyp/test/mac/archs/file_b.h
        client/djinni-client-app/deps/gyp/test/mac/archs/file_c.cc
        client/djinni-client-app/deps/gyp/test/mac/archs/file_d.cc
        client/djinni-client-app/deps/gyp/test/mac/archs/header.h
        client/djinni-client-app/deps/gyp/test/mac/archs/my_file.cc
        client/djinni-client-app/deps/gyp/test/mac/archs/my_main_file.cc
        client/djinni-client-app/deps/gyp/test/mac/cflags/ccfile.cc
        client/djinni-client-app/deps/gyp/test/mac/cflags/ccfile_withcflags.cc
        client/djinni-client-app/deps/gyp/test/mac/cflags/cfile.c
        client/djinni-client-app/deps/gyp/test/mac/cflags/cppfile.cpp
        client/djinni-client-app/deps/gyp/test/mac/cflags/cppfile_withcflags.cpp
        client/djinni-client-app/deps/gyp/test/mac/cflags/cxxfile.cxx
        client/djinni-client-app/deps/gyp/test/mac/cflags/cxxfile_withcflags.cxx
        client/djinni-client-app/deps/gyp/test/mac/clang-cxx-language-standard/c++11.cc
        client/djinni-client-app/deps/gyp/test/mac/clang-cxx-language-standard/c++98.cc
        client/djinni-client-app/deps/gyp/test/mac/clang-cxx-library/libc++.cc
        client/djinni-client-app/deps/gyp/test/mac/clang-cxx-library/libstdc++.cc
        client/djinni-client-app/deps/gyp/test/mac/copy-dylib/empty.c
        client/djinni-client-app/deps/gyp/test/mac/debuginfo/file.c
        client/djinni-client-app/deps/gyp/test/mac/depend-on-bundle/bundle.c
        client/djinni-client-app/deps/gyp/test/mac/depend-on-bundle/executable.c
        client/djinni-client-app/deps/gyp/test/mac/deployment-target/check-version-min.c
        client/djinni-client-app/deps/gyp/test/mac/framework/TestFramework/ObjCVector.h
        client/djinni-client-app/deps/gyp/test/mac/framework/TestFramework/ObjCVectorInternal.h
        client/djinni-client-app/deps/gyp/test/mac/framework/empty.c
        client/djinni-client-app/deps/gyp/test/mac/framework-dirs/calculate.c
        client/djinni-client-app/deps/gyp/test/mac/framework-headers/myframework.h
        client/djinni-client-app/deps/gyp/test/mac/identical-name/proxy/testlib/testlib.cc
        client/djinni-client-app/deps/gyp/test/mac/identical-name/proxy/proxy.cc
        client/djinni-client-app/deps/gyp/test/mac/identical-name/testlib/main.cc
        client/djinni-client-app/deps/gyp/test/mac/identical-name/testlib/void.cc
        client/djinni-client-app/deps/gyp/test/mac/infoplist-process/main.c
        client/djinni-client-app/deps/gyp/test/mac/installname/file.c
        client/djinni-client-app/deps/gyp/test/mac/installname/main.c
        client/djinni-client-app/deps/gyp/test/mac/ldflags/subdirectory/file.c
        client/djinni-client-app/deps/gyp/test/mac/ldflags-libtool/file.c
        client/djinni-client-app/deps/gyp/test/mac/libraries/subdir/hello.cc
        client/djinni-client-app/deps/gyp/test/mac/libraries/subdir/mylib.c
        client/djinni-client-app/deps/gyp/test/mac/libtool-zero/mylib.c
        client/djinni-client-app/deps/gyp/test/mac/loadable-module/module.c
        client/djinni-client-app/deps/gyp/test/mac/loadable-module-bundle-product-extension/src.cc
        client/djinni-client-app/deps/gyp/test/mac/lto/ccfile.cc
        client/djinni-client-app/deps/gyp/test/mac/lto/cfile.c
        client/djinni-client-app/deps/gyp/test/mac/missing-cfbundlesignature/file.c
        client/djinni-client-app/deps/gyp/test/mac/non-strs-flattened-to-env/main.c
        client/djinni-client-app/deps/gyp/test/mac/objc-arc/c-file.c
        client/djinni-client-app/deps/gyp/test/mac/objc-arc/cc-file.cc
        client/djinni-client-app/deps/gyp/test/mac/objc-gc/c-file.c
        client/djinni-client-app/deps/gyp/test/mac/objc-gc/cc-file.cc
        client/djinni-client-app/deps/gyp/test/mac/postbuild-copy-bundle/empty.c
        client/djinni-client-app/deps/gyp/test/mac/postbuild-copy-bundle/main.c
        client/djinni-client-app/deps/gyp/test/mac/postbuild-defaults/main.c
        client/djinni-client-app/deps/gyp/test/mac/postbuild-fail/file.c
        client/djinni-client-app/deps/gyp/test/mac/postbuild-multiple-configurations/main.c
        client/djinni-client-app/deps/gyp/test/mac/postbuild-static-library/empty.c
        client/djinni-client-app/deps/gyp/test/mac/postbuilds/file.c
        client/djinni-client-app/deps/gyp/test/mac/postbuilds/file_g.c
        client/djinni-client-app/deps/gyp/test/mac/postbuilds/file_h.c
        client/djinni-client-app/deps/gyp/test/mac/prefixheader/file.c
        client/djinni-client-app/deps/gyp/test/mac/prefixheader/file.cc
        client/djinni-client-app/deps/gyp/test/mac/prefixheader/header.h
        client/djinni-client-app/deps/gyp/test/mac/rebuild/empty.c
        client/djinni-client-app/deps/gyp/test/mac/rebuild/main.c
        client/djinni-client-app/deps/gyp/test/mac/rpath/file.c
        client/djinni-client-app/deps/gyp/test/mac/rpath/main.c
        client/djinni-client-app/deps/gyp/test/mac/sdkroot/file.cc
        client/djinni-client-app/deps/gyp/test/mac/sourceless-module/empty.c
        client/djinni-client-app/deps/gyp/test/mac/sourceless-module/fun.c
        client/djinni-client-app/deps/gyp/test/mac/strip/subdirectory/nested_file.c
        client/djinni-client-app/deps/gyp/test/mac/strip/file.c
        client/djinni-client-app/deps/gyp/test/mac/strip/main.c
        client/djinni-client-app/deps/gyp/test/mac/type_envvars/file.c
        client/djinni-client-app/deps/gyp/test/mac/unicode-settings/file.cc
        client/djinni-client-app/deps/gyp/test/mac/xcode-env-order/main.c
        client/djinni-client-app/deps/gyp/test/mac/xcode-gcc/aliasing.cc
        client/djinni-client-app/deps/gyp/test/mac/xcode-gcc/valid_c.c
        client/djinni-client-app/deps/gyp/test/mac/xcode-gcc/valid_cc.cc
        client/djinni-client-app/deps/gyp/test/mac/xcode-gcc/warn_about_invalid_offsetof_macro.cc
        client/djinni-client-app/deps/gyp/test/mac/xcode-gcc/warn_about_missing_newline.c
        client/djinni-client-app/deps/gyp/test/mac/xcode-support-actions/source.c
        client/djinni-client-app/deps/gyp/test/mac/xctest/MyClass.h
        client/djinni-client-app/deps/gyp/test/make/noload/lib/shared.c
        client/djinni-client-app/deps/gyp/test/make/noload/lib/shared.h
        client/djinni-client-app/deps/gyp/test/make/noload/main.c
        client/djinni-client-app/deps/gyp/test/make/main.cc
        client/djinni-client-app/deps/gyp/test/make/main.h
        client/djinni-client-app/deps/gyp/test/make_global_settings/full-toolchain/bar.cc
        client/djinni-client-app/deps/gyp/test/make_global_settings/full-toolchain/foo.c
        client/djinni-client-app/deps/gyp/test/module/src/lib1.c
        client/djinni-client-app/deps/gyp/test/module/src/lib2.c
        client/djinni-client-app/deps/gyp/test/module/src/program.c
        client/djinni-client-app/deps/gyp/test/msvs/buildevents/main.cc
        client/djinni-client-app/deps/gyp/test/msvs/config_attrs/hello.c
        client/djinni-client-app/deps/gyp/test/msvs/external_builder/hello.cpp
        client/djinni-client-app/deps/gyp/test/msvs/list_excluded/hello.cpp
        client/djinni-client-app/deps/gyp/test/msvs/list_excluded/hello_mac.cpp
        client/djinni-client-app/deps/gyp/test/msvs/props/hello.c
        client/djinni-client-app/deps/gyp/test/msvs/shared_output/there/there.c
        client/djinni-client-app/deps/gyp/test/msvs/shared_output/hello.c
        client/djinni-client-app/deps/gyp/test/msvs/uldi2010/hello.c
        client/djinni-client-app/deps/gyp/test/msvs/uldi2010/hello2.c
        client/djinni-client-app/deps/gyp/test/multiple-targets/src/common.c
        client/djinni-client-app/deps/gyp/test/multiple-targets/src/prog1.c
        client/djinni-client-app/deps/gyp/test/multiple-targets/src/prog2.c
        client/djinni-client-app/deps/gyp/test/ninja/action_dependencies/src/a.c
        client/djinni-client-app/deps/gyp/test/ninja/action_dependencies/src/a.h
        client/djinni-client-app/deps/gyp/test/ninja/action_dependencies/src/b.c
        client/djinni-client-app/deps/gyp/test/ninja/action_dependencies/src/b.h
        client/djinni-client-app/deps/gyp/test/ninja/action_dependencies/src/c.c
        client/djinni-client-app/deps/gyp/test/ninja/action_dependencies/src/c.h
        client/djinni-client-app/deps/gyp/test/ninja/chained-dependency/chained.c
        client/djinni-client-app/deps/gyp/test/ninja/normalize-paths-win/hello.cc
        client/djinni-client-app/deps/gyp/test/ninja/solibs_avoid_relinking/main.cc
        client/djinni-client-app/deps/gyp/test/ninja/solibs_avoid_relinking/solib.cc
        client/djinni-client-app/deps/gyp/test/ninja/use-custom-environment-files/use-custom-environment-files.cc
        client/djinni-client-app/deps/gyp/test/no-cpp/src/call-f-main.c
        client/djinni-client-app/deps/gyp/test/no-cpp/src/empty-main.c
        client/djinni-client-app/deps/gyp/test/no-cpp/src/f.cc
        client/djinni-client-app/deps/gyp/test/product/hello.c
        client/djinni-client-app/deps/gyp/test/prune_targets/lib1.cc
        client/djinni-client-app/deps/gyp/test/prune_targets/lib2.cc
        client/djinni-client-app/deps/gyp/test/prune_targets/lib3.cc
        client/djinni-client-app/deps/gyp/test/prune_targets/lib_indirect.cc
        client/djinni-client-app/deps/gyp/test/prune_targets/program.cc
        client/djinni-client-app/deps/gyp/test/relative/foo/a/c/c.cc
        client/djinni-client-app/deps/gyp/test/relative/foo/a/a.cc
        client/djinni-client-app/deps/gyp/test/relative/foo/b/b.cc
        client/djinni-client-app/deps/gyp/test/rename/filecase/file.c
        client/djinni-client-app/deps/gyp/test/rules/src/subdir1/program.c
        client/djinni-client-app/deps/gyp/test/rules/src/subdir2/program.c
        client/djinni-client-app/deps/gyp/test/rules/src/subdir3/program.c
        client/djinni-client-app/deps/gyp/test/rules/src/subdir4/program.c
        client/djinni-client-app/deps/gyp/test/rules-dirname/src/subdir/main.cc
        client/djinni-client-app/deps/gyp/test/rules-rebuild/src/main.c
        client/djinni-client-app/deps/gyp/test/rules-use-built-dependencies/src/main.cc
        client/djinni-client-app/deps/gyp/test/rules-variables/src/input_name/test.c
        client/djinni-client-app/deps/gyp/test/rules-variables/src/input_path/subdir/test.c
        client/djinni-client-app/deps/gyp/test/rules-variables/src/subdir/input_dirname.c
        client/djinni-client-app/deps/gyp/test/rules-variables/src/subdir/test.c
        client/djinni-client-app/deps/gyp/test/rules-variables/src/input_ext.c
        client/djinni-client-app/deps/gyp/test/rules-variables/src/test.input_root.c
        client/djinni-client-app/deps/gyp/test/same-gyp-name/src/subdir1/main1.cc
        client/djinni-client-app/deps/gyp/test/same-gyp-name/src/subdir2/main2.cc
        client/djinni-client-app/deps/gyp/test/same-source-file-name/src/subdir1/func.c
        client/djinni-client-app/deps/gyp/test/same-source-file-name/src/subdir2/func.c
        client/djinni-client-app/deps/gyp/test/same-source-file-name/src/func.c
        client/djinni-client-app/deps/gyp/test/same-source-file-name/src/prog1.c
        client/djinni-client-app/deps/gyp/test/same-source-file-name/src/prog2.c
        client/djinni-client-app/deps/gyp/test/same-source-file-name/src/prog3.c
        client/djinni-client-app/deps/gyp/test/sanitize-rule-names/hello.cc
        client/djinni-client-app/deps/gyp/test/sibling/src/prog1/prog1.c
        client/djinni-client-app/deps/gyp/test/sibling/src/prog2/prog2.c
        client/djinni-client-app/deps/gyp/test/standalone-static-library/mylib.c
        client/djinni-client-app/deps/gyp/test/standalone-static-library/prog.c
        client/djinni-client-app/deps/gyp/test/subdirectory/src/subdir/subdir2/prog3.c
        client/djinni-client-app/deps/gyp/test/subdirectory/src/subdir/prog2.c
        client/djinni-client-app/deps/gyp/test/subdirectory/src/prog1.c
        client/djinni-client-app/deps/gyp/test/target/hello.c
        client/djinni-client-app/deps/gyp/test/toolsets/main.cc
        client/djinni-client-app/deps/gyp/test/toolsets/toolsets.cc
        client/djinni-client-app/deps/gyp/test/toolsets/toolsets_shared.cc
        client/djinni-client-app/deps/gyp/test/toplevel-dir/src/sub1/prog1.c
        client/djinni-client-app/deps/gyp/test/toplevel-dir/src/sub2/prog2.c
        client/djinni-client-app/deps/gyp/test/variables/latelate/src/program.cc
        client/djinni-client-app/deps/gyp/test/variables/variable-in-path/C1/hello.cc
        client/djinni-client-app/deps/gyp/test/win/asm-files/hello.cc
        client/djinni-client-app/deps/gyp/test/win/compiler-flags/subdir/header.h
        client/djinni-client-app/deps/gyp/test/win/compiler-flags/additional-include-dirs.cc
        client/djinni-client-app/deps/gyp/test/win/compiler-flags/additional-options.cc
        client/djinni-client-app/deps/gyp/test/win/compiler-flags/buffer-security.cc
        client/djinni-client-app/deps/gyp/test/win/compiler-flags/calling-convention.cc
        client/djinni-client-app/deps/gyp/test/win/compiler-flags/character-set-mbcs.cc
        client/djinni-client-app/deps/gyp/test/win/compiler-flags/character-set-unicode.cc
        client/djinni-client-app/deps/gyp/test/win/compiler-flags/default-char-is-unsigned.cc
        client/djinni-client-app/deps/gyp/test/win/compiler-flags/disable-specific-warnings.cc
        client/djinni-client-app/deps/gyp/test/win/compiler-flags/enable-enhanced-instruction-set.cc
        client/djinni-client-app/deps/gyp/test/win/compiler-flags/exception-handling-on.cc
        client/djinni-client-app/deps/gyp/test/win/compiler-flags/floating-point-model-fast.cc
        client/djinni-client-app/deps/gyp/test/win/compiler-flags/floating-point-model-precise.cc
        client/djinni-client-app/deps/gyp/test/win/compiler-flags/floating-point-model-strict.cc
        client/djinni-client-app/deps/gyp/test/win/compiler-flags/force-include-files-with-precompiled.cc
        client/djinni-client-app/deps/gyp/test/win/compiler-flags/force-include-files.cc
        client/djinni-client-app/deps/gyp/test/win/compiler-flags/function-level-linking.cc
        client/djinni-client-app/deps/gyp/test/win/compiler-flags/hello.cc
        client/djinni-client-app/deps/gyp/test/win/compiler-flags/pdbname.cc
        client/djinni-client-app/deps/gyp/test/win/compiler-flags/precomp.cc
        client/djinni-client-app/deps/gyp/test/win/compiler-flags/rtti-on.cc
        client/djinni-client-app/deps/gyp/test/win/compiler-flags/runtime-checks.cc
        client/djinni-client-app/deps/gyp/test/win/compiler-flags/runtime-library-md.cc
        client/djinni-client-app/deps/gyp/test/win/compiler-flags/runtime-library-mdd.cc
        client/djinni-client-app/deps/gyp/test/win/compiler-flags/runtime-library-mt.cc
        client/djinni-client-app/deps/gyp/test/win/compiler-flags/runtime-library-mtd.cc
        client/djinni-client-app/deps/gyp/test/win/compiler-flags/treat-wchar-t-as-built-in-type1.cc
        client/djinni-client-app/deps/gyp/test/win/compiler-flags/treat-wchar-t-as-built-in-type2.cc
        client/djinni-client-app/deps/gyp/test/win/compiler-flags/uninit.cc
        client/djinni-client-app/deps/gyp/test/win/compiler-flags/warning-as-error.cc
        client/djinni-client-app/deps/gyp/test/win/compiler-flags/warning-level1.cc
        client/djinni-client-app/deps/gyp/test/win/compiler-flags/warning-level2.cc
        client/djinni-client-app/deps/gyp/test/win/compiler-flags/warning-level3.cc
        client/djinni-client-app/deps/gyp/test/win/compiler-flags/warning-level4.cc
        client/djinni-client-app/deps/gyp/test/win/enable-winrt/dllmain.cc
        client/djinni-client-app/deps/gyp/test/win/generator-output-different-drive/prog.c
        client/djinni-client-app/deps/gyp/test/win/idl-excluded/program.cc
        client/djinni-client-app/deps/gyp/test/win/idl-includedirs/hello.cc
        client/djinni-client-app/deps/gyp/test/win/idl-rules/history_indexer_user.cc
        client/djinni-client-app/deps/gyp/test/win/importlib/dll_no_exports.cc
        client/djinni-client-app/deps/gyp/test/win/importlib/has-exports.cc
        client/djinni-client-app/deps/gyp/test/win/importlib/hello.cc
        client/djinni-client-app/deps/gyp/test/win/large-pdb/dllmain.cc
        client/djinni-client-app/deps/gyp/test/win/large-pdb/main.cc
        client/djinni-client-app/deps/gyp/test/win/lib-flags/answer.cc
        client/djinni-client-app/deps/gyp/test/win/lib-flags/answer.h
        client/djinni-client-app/deps/gyp/test/win/linker-flags/a/x.cc
        client/djinni-client-app/deps/gyp/test/win/linker-flags/a/z.cc
        client/djinni-client-app/deps/gyp/test/win/linker-flags/b/y.cc
        client/djinni-client-app/deps/gyp/test/win/linker-flags/additional-deps.cc
        client/djinni-client-app/deps/gyp/test/win/linker-flags/deffile.cc
        client/djinni-client-app/deps/gyp/test/win/linker-flags/delay-load.cc
        client/djinni-client-app/deps/gyp/test/win/linker-flags/entrypointsymbol.cc
        client/djinni-client-app/deps/gyp/test/win/linker-flags/hello.cc
        client/djinni-client-app/deps/gyp/test/win/linker-flags/inline_test.cc
        client/djinni-client-app/deps/gyp/test/win/linker-flags/inline_test.h
        client/djinni-client-app/deps/gyp/test/win/linker-flags/inline_test_main.cc
        client/djinni-client-app/deps/gyp/test/win/linker-flags/library-adjust.cc
        client/djinni-client-app/deps/gyp/test/win/linker-flags/library-directories-define.cc
        client/djinni-client-app/deps/gyp/test/win/linker-flags/library-directories-reference.cc
        client/djinni-client-app/deps/gyp/test/win/linker-flags/link-warning.cc
        client/djinni-client-app/deps/gyp/test/win/linker-flags/main-crt.c
        client/djinni-client-app/deps/gyp/test/win/linker-flags/manifest-in-comment.cc
        client/djinni-client-app/deps/gyp/test/win/linker-flags/mapfile.cc
        client/djinni-client-app/deps/gyp/test/win/linker-flags/no-default-libs.cc
        client/djinni-client-app/deps/gyp/test/win/linker-flags/nodefaultlib.cc
        client/djinni-client-app/deps/gyp/test/win/linker-flags/opt-icf.cc
        client/djinni-client-app/deps/gyp/test/win/linker-flags/opt-ref.cc
        client/djinni-client-app/deps/gyp/test/win/linker-flags/safeseh_hello.cc
        client/djinni-client-app/deps/gyp/test/win/linker-flags/subsystem-windows.cc
        client/djinni-client-app/deps/gyp/test/win/linker-flags/x.cc
        client/djinni-client-app/deps/gyp/test/win/linker-flags/y.cc
        client/djinni-client-app/deps/gyp/test/win/linker-flags/z.cc
        client/djinni-client-app/deps/gyp/test/win/long-command-line/function.cc
        client/djinni-client-app/deps/gyp/test/win/long-command-line/hello.cc
        client/djinni-client-app/deps/gyp/test/win/ml-safeseh/hello.cc
        client/djinni-client-app/deps/gyp/test/win/precompiled/hello.c
        client/djinni-client-app/deps/gyp/test/win/precompiled/hello2.c
        client/djinni-client-app/deps/gyp/test/win/precompiled/precomp.c
        client/djinni-client-app/deps/gyp/test/win/rc-build/subdir/include.h
        client/djinni-client-app/deps/gyp/test/win/rc-build/hello.cpp
        client/djinni-client-app/deps/gyp/test/win/rc-build/hello.h
        client/djinni-client-app/deps/gyp/test/win/rc-build/Resource.h
        client/djinni-client-app/deps/gyp/test/win/rc-build/targetver.h
        client/djinni-client-app/deps/gyp/test/win/shard/hello.cc
        client/djinni-client-app/deps/gyp/test/win/shard/hello1.cc
        client/djinni-client-app/deps/gyp/test/win/shard/hello2.cc
        client/djinni-client-app/deps/gyp/test/win/shard/hello3.cc
        client/djinni-client-app/deps/gyp/test/win/shard/hello4.cc
        client/djinni-client-app/deps/gyp/test/win/system-include/bar/header.h
        client/djinni-client-app/deps/gyp/test/win/system-include/common/commonheader.h
        client/djinni-client-app/deps/gyp/test/win/system-include/foo/header.h
        client/djinni-client-app/deps/gyp/test/win/system-include/main.cc
        client/djinni-client-app/deps/gyp/test/win/uldi/a.cc
        client/djinni-client-app/deps/gyp/test/win/uldi/b.cc
        client/djinni-client-app/deps/gyp/test/win/uldi/main.cc
        client/djinni-client-app/deps/gyp/test/win/vs-macros/hello.cc
        client/djinni-client-app/deps/sqlite3/shell.c
        client/djinni-client-app/deps/sqlite3/sqlite3.c
        client/djinni-client-app/deps/sqlite3/sqlite3.h
        client/djinni-client-app/deps/sqlite3/sqlite3ext.h
        client/djinni-client-app/generated-src/cpp/user.hpp
        client/djinni-client-app/generated-src/jni/NativeClient.cpp
        client/djinni-client-app/generated-src/jni/NativeClient.hpp
        client/djinni-client-app/generated-src/jni/NativeUser.cpp
        client/djinni-client-app/generated-src/jni/NativeUser.hpp
        client/djinni-client-app/generated-src/objc/TDAClient+Private.h
        client/djinni-client-app/generated-src/objc/TDAClient.h
        client/djinni-client-app/generated-src/objc/TDAUser+Private.h
        client/djinni-client-app/generated-src/objc/TDAUser.h
        client/djinni-client-app/src/grpc/client.grpc.pb.cc
        client/djinni-client-app/src/grpc/client.grpc.pb.h
        client/djinni-client-app/src/grpc/client.pb.cc
        client/djinni-client-app/src/grpc/client.pb.h
        client/djinni-client-app/src/client_impl.cpp
        client/djinni-client-app/src/client_impl.hpp)

add_executable(homework ${SOURCE_FILES})